--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.17.2",
+    "axios": "^0.24.0",
     "babel-jest": "26.6.0",
+    "formik": "^2.2.9",
+    "http-proxy-middleware": "^0.19.1",
     "node-sass": "4.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
